--- a/GMS.Web.Admin/Areas/Project/Views/ProjectBasedata/Edit.cshtml
+++ b/GMS.Web.Admin/Areas/Project/Views/ProjectBasedata/Edit.cshtml
@@ -8,100 +8,95 @@
     Layout = "~/Views/Shared/_Layout.Edit.cshtml";
 }
 @section PageSpecificStyleSheetIncludes{
+      <style type="css/text">
+          .control-group{
+              width:50%;
+              display:inline;
+              float:left;
+          }
+   </style>
 }
 @section PageSpecificJavascriptIncludes{
     <script type="text/javascript">
+       
+   
    </script>
 }
 @section MainContent{
+
+  
+
 <div class="portlet-body form-horizontal form-bordered form-row-stripped">
     <div class="row-fluid"> 
-            <div class="control-group" >
+              <div class="control-group" style="float:left;width:50%">
                 <label class="control-label"><span class="required">项目</span>：</label>
                 <div class="controls">
-                @Html.TextBoxFor(m => m.ProjName, new { @class = "m-wrap" })
+                @Html.TextBoxFor(m => m.ProjName, new { @class = "m-wrap large" })
                 <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjName)</span>
                 </div>
             </div>
 
-            <div class="control-group">
-                <label class="control-label">负责人：</label>
+             <div class="control-group" style="float:left;width:50%">
+                <label class="control-label "><span class="required"></span>位置：</label>
+                <div class="controls ">
+                @Html.TextBoxFor(m => m.ProjLocation, new { @class = "m-wrap large" })
+                <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjLocation)</span>
+                </div>
+            </div>
+        
+            <div class="control-group" style="float:left;width:50%">
+                <label class="control-label ">负责人：</label>
                 <div class="controls">
                 @Html.TextBoxFor(m => m.ProjChargeman, new { @class = "m-wrap small" })
                 <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjChargeman)</span>
                 </div>
             </div>
-         <div class="control-group">
+
+
+
+
+            <div class="control-group" style="float:left;width:50%">
                 <label class="control-label">联系电话：</label>
                 <div class="controls">
                 @Html.TextBoxFor(m => m.ProjPhone, new { @class = "m-wrap small" })
                 <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjPhone)</span>
                 </div>
             </div>
+     
+     
+       
 
 
-
-        </div>
-             <div class="row-fluid"> 
-        <div class="control-group">
-                <label class="control-label"><span class="required"></span>位置：</label>
-                <div class="controls">
-                @Html.TextBoxFor(m => m.ProjLocation, new { @class = "m-wrap" })
-                <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjLocation)</span>
-                </div>
-            </div>
-
-            <div class="control-group">
-                <label class="control-label">面积：</label>
-                <div class="controls">
-                @Html.TextBoxFor(m => m.ProjChargeman, new { @class = "m-wrap small" })
-                <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjChargeman)</span>
-                </div>
-            </div>
-
-        <div class="control-group">
+              <div class="control-group"  style="float:left;width:50%">
                 <label class="control-label">开工时间：</label>
                 <div class="controls">
                 @Html.TextBoxFor(m => m.ProjStartdate, new { @class = "m-wrap" })
-                <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjStartdate)</span>
+               
                 </div>
             </div>
 
-            <div class="control-group">
-                <label class="control-label">工期：</label>
+            <div class="control-group" style="float:left;width:50%">
+                <label class="control-label" >工期：</label>
                 <div class="controls">
-                @Html.TextBoxFor(m => m.Projdate, new { @class = "m-wrap large" })
+                @Html.TextBoxFor(m => m.Projdate, new { @class = "m-wrap small" })
                 <span class="help-inline">@Html.ValidationMessageFor(m => m.Projdate)</span>
                 </div>
             </div>
 
-        <div class="control-group">
-                <label class="control-label">项目状态：</label>   @*二期施工 已结束 施工中 ，未施工，三期施工*@
-                <div class="controls">
-                @Html.TextBoxFor(m => m.state, new { @class = "m-wrap" })
-                <span class="help-inline">@Html.ValidationMessageFor(m => m.state)</span>
-                </div>
-            </div>
+       
 
            
 
-        <div class="control-group">
-                <label class="control-label">项目内容：</label>
-                <div class="controls">
-                @Html.TextBoxFor(m => m.ProjContent, new { @class = "m-wrap" })
-                <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjContent)</span>
-                </div>
-            </div>
-
-            <div class="control-group">
+      
+          @*  <div class="control-group">
                 <label class="control-label">工程规模：</label>
                 <div class="controls">
                 @Html.TextBoxFor(m => m.ProjScale, new { @class = "m-wrap large" })
                 <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjScale)</span>
                 </div>
-            </div>
+            </div>*@
 
-        <div class="control-group">
+        <div class="control-group" style="float:left;width:50%">
                 <label class="control-label">结构形式：</label>
                 <div class="controls">
                 @Html.TextBoxFor(m => m.ProjStructure, new { @class = "m-wrap" })
@@ -109,7 +104,7 @@
                 </div>
             </div>
 
-            <div class="control-group">
+            <div class="control-group"style="float:left;width:50%">
                 <label class="control-label">资金来源：</label>
                 <div class="controls">
                 @Html.TextBoxFor(m => m.ProjFunds, new { @class = "m-wrap large" })
@@ -117,7 +112,7 @@
                 </div>
             </div>
 
-        <div class="control-group">
+        <div class="control-group" style="float:left;width:50%">
                 <label class="control-label">报价：</label>
                 <div class="controls">
                 @Html.TextBoxFor(m => m.ProjPrice, new { @class = "m-wrap" })
@@ -125,21 +120,46 @@
                 </div>
             </div>
 
-            <div class="control-group">
+            <div class="control-group" style="float:left;width:50%">
                 <label class="control-label">成本预算：</label>
                 <div class="controls">
                 @Html.TextBoxFor(m => m.ProjCostBudget, new { @class = "m-wrap large" })
                 <span class="help-inline">@Html.ValidationMessageFor(m => m.ProjCostBudget)</span>
                 </div>
             </div>
+          @*<div class="control-group">
+                <label class="control-label">报价：</label>
+                <div class="controls" style="width:30%">
+                      @Html.TextBoxFor(m => m.ProjPrice, new { @class = "m-wrap small" })
+            
+                </div>
+            
+                <label class="control-label">成本预算：</label>
+                <div class="controls"  style="width:30%">
+               @Html.TextBoxFor(m => m.ProjCostBudget, new { @class = "m-wrap small" })
 
-        <div class="control-group">
-                <label class="control-label">备注：</label>
-                <div class="controls">
-                @Html.TextBoxFor(m => m.Remark, new { @class = "m-wrap" })
-                <text class="help-inline">@Html.ValidationMessageFor(m => m.Remark)</text>
+                </div>
+            </div>*@
+           <div class="control-group">
+                <label class="control-label">工程规模：</label>
+                <div class="controls" >
+                @Html.TextArea("ProjScale", new { style="width:80%,padding-top:10px"}) 
                 </div>
             </div>
+         <div class="control-group">
+                <label class="control-label">项目内容：</label>
+                <div class="controls">
+                @Html.TextArea("ProjContent", new { style="width:80%"}) 
+                </div>
+            </div>
+          <div class="control-group">
+                <label class="control-label">备注：</label>
+                <div class="controls">
+                @Html.TextArea("Remark", new { style="width:80%"}) 
+                </div>
+            </div>
+
+      
 
          
     </div>
