--- a/GMS.Web.Admin/Areas/BasisData/Views/Supplier/ShowSupplierMaterial.cshtml
+++ b/GMS.Web.Admin/Areas/BasisData/Views/Supplier/ShowSupplierMaterial.cshtml
@@ -8,7 +8,7 @@
 @model Supplier
 
 @{
-    Layout = "~/Views/Shared/_Layout.supplier.cshtml";
+    Layout = "~/Views/Shared/_Content.cshtml";
 }
 
 <div class="row-fluid">
